// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Github API Config Test Should match correct config with auth 1`] = `
Object {
  "Accept": "application/vnd.github.v3+json",
  "Authorization": "token falsetoken923908-4325",
}
`;

exports[`Github API Config Test Should match correct config with auth 2`] = `"https://api.github.com"`;

exports[`Github API Config Test Should match correct config without auth 1`] = `
Object {
  "Accept": "application/vnd.github.v3+json",
}
`;

exports[`Github API Config Test Should match correct config without auth 2`] = `"https://api.github.com"`;
